<resources>
    <string name="app_name">VTS</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_email">Enter email</string>
    <string name="password">Password</string>
    <string name="email">User Email</string>
    <string name="login">LOGIN</string>
    <string name="i_forgot_my_password">I forgot my password</string>
    <string name="or_login_with">or login with</string>
    <string name="please_login_with_your_information">Please login with your information</string>
    <string name="please_sign_up_with_your_information">Please sing up with your information</string>
    <string name="sign_up">SIGN UP</string>
    <string name="name">User Name</string>
    <string name="enter_your_full_name">Enter your full name</string>
    <string name="click_to_login">Click to Login</string>
    <string name="click_to_sign_up">Click to Sign Up</string>
    <string name="log_out">Log Out</string>
    <string name="contact">About Us</string>
    <string name="devices">Devices</string>
    <string name="menu">Home</string>
    <string name="share">Share</string>
    <string name="add_device">Add Device</string>
    <string name="vehicle_number">Vehicle Number:</string>
    <string name="vehicle_name">Vehicle Name:</string>
    <string name="normal_map">Normal Map</string>
    <string name="hybrid_map">Hybrid Map</string>
    <string name="satellite_map">Satellite Map</string>
    <string name="terrain_map">Terrain Map</string>
    <string name="lat_long_snippet">Lat: %1$.5f, Long: %2$.5f</string>
    <string name="dropped_pin">Dropped Pin</string>
    <string name="poi">poi</string>
    <string name="feature1">Track Your Vehicle form anywhere!</string>
    <string name="feature2">Keep in touch with your vechicle!</string>
    <string name="app_support_email">Email</string>
    <string name="phone_number">Phone</string>
    <string name="catonact_us">Catonact Us</string>
    <string name="phone_no">1122558869</string>
    <string name="contact_email">vts@support.com</string>
    <string name="add_new_device">Add New Device</string>
    <string name="enter_the_vehicle_number">Enter the vehicle number</string>
    <string name="enter_the_vehicle_name">Enter the vehicle name</string>
    <string name="enter_longitude">Enter longitude</string>
    <string name="enter_latitude">Enter latitude</string>
    <string name="add_vehicle">Add Vehicle</string>
</resources>