<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/group1">
        <item
            android:id="@+id/navMenu"
            android:title="@string/menu"
            android:icon="@drawable/round_home_24"/>
        <item
            android:id="@+id/navDevices"
            android:title="@string/devices"
            android:icon="@drawable/devices"/>
    </group>
    <group
        android:id="@+id/group2">
        <item
            android:id="@+id/navContact"
            android:title="@string/contact"
            android:icon="@drawable/contact"/>
        <item
            android:id="@+id/navShare"
            android:title="@string/share"
            android:icon="@drawable/share"/>
        <item
            android:id="@+id/navLogout"
            android:title="@string/log_out"
            android:icon="@drawable/logout"/>
    </group>


</menu>