<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".AboutUsActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:background="@drawable/cardview_border"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">
            <TextView
                android:id="@+id/CardTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:fontFamily="serif"
                android:textColor="@color/secondary_color"
                android:text="@string/catonact_us"/>
            <TextView
                android:id="@+id/appEmail"
                android:layout_below="@id/CardTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_support_email" />
            <TextView
                android:layout_toEndOf="@+id/appEmail"
                android:layout_below="@id/CardTitle"
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_email" />
            <TextView
                android:id="@+id/appNumber"
                android:layout_below="@id/appEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_number" />
            <TextView
                android:layout_toEndOf="@+id/appEmail"
                android:layout_below="@id/appEmail"
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_no" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>