<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/traffic_bg"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primery_color"
        android:padding="5dp"
        android:alpha="0.7"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_above="@id/card_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:id="@+id/appLogo"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:src="@drawable/app_logo"/>
        <TextView
            android:id="@+id/text_appName"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:textSize="50dp"
            android:text="VTS"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:gravity="center"
            android:fontFamily="sans-serif-medium"/>
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:cardCornerRadius="30dp"
        android:layout_marginBottom="-20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">
            <View
                android:layout_width="match_parent"
                android:layout_height="20dp"/>
            <ProgressBar
                android:id="@+id/progressbar"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="36dp"
                android:textColor="@color/secondary_color"
                android:textStyle="bold"
                android:fontFamily="sans-serif-medium"
                android:text="Welcome"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/please_sign_up_with_your_information"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="30dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/name"/>
            <EditText
                android:id="@+id/edtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_full_name"
                android:inputType="textPersonName"
                android:drawableEnd="@drawable/done_icon"
                android:alpha="0.7"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="20dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/email"/>
            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_email"
                android:inputType="textEmailAddress"
                android:drawableEnd="@drawable/done_icon"
                android:alpha="0.7"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="20dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/password"/>
            <EditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                android:drawableEnd="@drawable/password_icon"
                android:alpha="0.7"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="20dp"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/sign_up"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"/>
            <TextView
                android:id="@+id/ivClickToLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:textStyle="bold"
                android:textSize="15sp"
                android:text="@string/click_to_login"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="30dp"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>


</RelativeLayout>